--- a/package.xml
+++ b/package.xml
@@ -2,25 +2,15 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
-  <name>stone_clay_ros</name>
+  <name>biodigitalmatter_ros</name>
   <version>0.0.0</version>
-  <description>The stone_clay_ros package</description>
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="tetov@todo.todo">tetov</maintainer>
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
-  <!-- Url tags are optional, but multiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/stone_clay_ros</url> -->
-  <!-- Author tags are optional, multiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintainers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <description>ROS setup for biodigital matter lab</description>
+  <maintainer email="anton@tetov.se">Anton Tetov Johansson</maintainer>
+  <license>MIT</license>
+  <url type="website">https://www.abm.lth.se/biodigitalmatter/</url>
+  <url type="repository">https://github.com/biodigitalmatter/</url>
+  <url type="bugtracker">https://github.com/biodigitalmatter/issues</url>
+
   <depend>roscpp</depend>
   <depend>rospy</depend>
 
@@ -35,6 +25,7 @@
   <exec_depend>abb_rws_state_publisher</exec_depend>
   <exec_depend>abb_robot_bringup_examples</exec_depend>
   <exec_depend>aruco_detect</exec_depend>
+  <exec_depend>abb_irb2400_moveit_config</exec_depend>
   <exec_depend>abb_resources</exec_depend> <!-- to execute xacro for abb robots -->
 
   <buildtool_depend>catkin</buildtool_depend>
