--- a/ros_install.yaml
+++ b/ros_install.yaml
@@ -25,10 +25,10 @@
 
     - name: Git checkout
       ansible.builtin.git:
-        repo: "https://github.com/biodigitalmatter/stone_clay_ros"
-        dest: "{{ catkin_ws }}/src/stone_clay_ros"
+        repo: "https://github.com/biodigitalmatter/biodigitalmatter_ros"
+        dest: "{{ catkin_ws }}/src/biodigitalmatter_ros"
 
-    - name: Install the latest version of Apache and MariaDB
+    - name: Install build tools
       ansible.builtin.package:
         name:
           - python3-vcstool
@@ -38,7 +38,7 @@
     - name: Setup repos
       ansible.builtin.command:
         chdir: "{{ catkin_ws }}"
-        cmd: "vcs import src < src/stone_clay_ros/dependencies.repos"
+        cmd: "vcs import src < src/biodigitalmatter_ros/dependencies.repos"
 
     - name: Setup repos
       ansible.builtin.command:
