--- a/ros_install.yaml
+++ b/ros_install.yaml
@@ -33,6 +33,7 @@
         name:
           - python3-vcstool
           - python3-catkin-tools
+          - python-is-python3
         state: latest
 
     - name: Setup repos
