--- a/config/oak-d-s2-af-poe/rgbd.yaml
+++ b/config/oak-d-s2-af-poe/rgbd.yaml
@@ -3,7 +3,7 @@
   camera_i_enable_imu: true
   camera_i_enable_ir: true
   camera_i_floodlight_brightness: 0.0
-  camera_i_ip: ''
+  camera_i_ip: '192.168.0.230'
   camera_i_laser_dot_brightness: 800.0
   camera_i_mx_id: '1944301031307E1300'
   camera_i_nn_type: spatial
