--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <exec_depend>file_server</exec_depend>
   <exec_depend>depthai</exec_depend> <!-- luxonis -->
   <exec_depend>realsense2_camera</exec_depend>
+  <exec_depend>rgbd_launch</exec_depend> <!-- dep realsense2 -->
   <exec_depend>axis_camera</exec_depend>
   <exec_depend>abb_rws_service_provider</exec_depend>
   <exec_depend>abb_rws_state_publisher</exec_depend>
