--- a/package.xml
+++ b/package.xml
@@ -18,7 +18,7 @@
   <exec_depend>compas_rrc_driver</exec_depend>
   <exec_depend>abb_irb4600_40_255_moveit_config</exec_depend>
   <exec_depend>file_server</exec_depend>
-  <exec_depend>depthai</exec_depend> <!-- luxonis -->
+  <exec_depend>depthai-ros</exec_depend> <!-- luxonis -->
   <exec_depend>realsense2_camera</exec_depend>
   <exec_depend>rgbd_launch</exec_depend> <!-- dep realsense2 -->
   <exec_depend>axis_camera</exec_depend>
