--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
     hooks:
       - id: end-of-file-fixer
       - id: check-merge-conflict
+      - id: check-xml
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
     hooks:
