--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,8 @@ repos:
       - id: end-of-file-fixer
       - id: check-merge-conflict
       - id: check-xml
+        types: [file]
+        files: \.(launch|xml|urdf)$
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
     hooks:
